wip: student IDs (Matrikelnummern) are now optional
